--- a/submit_file.ipynb
+++ b/submit_file.ipynb
@@ -465,6 +465,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cái nhìn tổng quan về dữ liệu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1184,9 +1191,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sns.distplot(data_df['bmi'])\n",
-    "plt.title('BMI Distribution')\n",
-    "plt.xlabel('BMI')"
+    "- **Nhận xét:** ta thấy **BMI** trung bình rời vào khoảng 30 điều này thật sự không tốt\n",
+    "- Theo **WHO** ta có thể chia thang đo BMI thành 4 loại như sau:\n",
+    "    - 1. Underweight - BMI < 18.5\n",
+    "    - 2. Normal - BMI >= 18.5 and BMI < 24.9\n",
+    "    - 3. Overweight - BMI >= 24.9 and BMI < 29.9\n",
+    "    - 4. Obese - BMI >= 30"
    ]
   },
   {
@@ -3435,7 +3445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
